<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/WarningPopUp2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/border"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_error_outline_black_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/typeOfNoti2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/warning"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/notiText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="?attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dismissbutton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setignore"
                android:text="@string/dismiss" />

            <Button
                android:id="@+id/fixbutton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="settingsDisplay"
                android:text="@string/fix" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>