<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal|vertical"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="App Icon"
            android:onClick="debugtog"
            app:srcCompat="@drawable/ic_phone"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="2dp"
            android:text="@string/welcome_text"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/WarningPopUps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:background="@drawable/border"
                android:clickable="true"
                android:gravity="center|center_horizontal"
                android:orientation="vertical"
                android:padding="0dp"
                android:paddingBottom="0dp"
                android:weightSum="0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViews"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_weight="0"
                        android:contentDescription="TODO"
                        android:padding="2dp"
                        app:srcCompat="@drawable/ic_error_outline_black_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/typeOfNotis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="@string/warning"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/notiTexts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="@string/placeholder" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/dividers"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dismissbutton2"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="setignore"
                        android:text="@string/dismiss" />

                    <Button
                        android:id="@+id/fixbutton2"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="settingsDisplay"
                        android:text="@string/fix" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="3" />

            <LinearLayout
                android:id="@+id/WarningPopUp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:background="@drawable/border"
                android:gravity="center|center_horizontal"
                android:orientation="vertical"
                android:padding="0dp"
                android:weightSum="0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_weight="0"
                        android:contentDescription="TODO"
                        android:padding="2dp"
                        app:srcCompat="@drawable/ic_error_outline_black_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/typeOfNoti2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="@string/warning"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/notiText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="@string/placeholder" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dismissbutton"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="setignoredebug"
                        android:text="@string/dismiss" />

                    <Button
                        android:id="@+id/fixbutton"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="settingsDisplay"
                        android:text="@string/fix" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/clearAll"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_weight="3"
                android:onClick="ignoreall"
                android:text="@string/clear_all" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/roundbutt"
        android:onClick="startTest"
        android:text="@string/start_button"
        app:layout_constraintBottom_toTopOf="@+id/button_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/button_row"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/crashbutton"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="crashApp"
            android:text="@string/crash_app" />

        <Button
            android:id="@+id/jumpbutton"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="jumpResults"
            android:text="@string/to_results" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_debug_mode_in_release_build" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>